--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="IE=edge">
+    <meta name="author" content="ClockFire">
+    <meta name="keywords" content="ClockFire, Dotty, Game, soonpoongdotty">
+    <meta name="description" content="개웃겨서 도티 낳음 공모전">
+    <title>soonpoongdotty</title>
     <style>
       body{
         margin: 0px;
